# tree-viz-linkml

./: README.md  app.py  pyproject.toml  requirements.txt
static/: style.css
templates/: aspects.html  categories.html  index.html  predicates.html
